added FeastReady project

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,27 @@
 
 @import "tailwindcss";
 
+/* Apply to elements with class .custom-scroll */
+.custom-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: #6d28d9;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.custom-scroll{
+  scroll-behavior: smooth;
+}
+
+
+
+
